# dmos

./: .gitignore  CMakeLists.txt
image/: kernel.elf
script/: create_img.bat  start_qemu.bat  write_img.bat
src/applib/: CMakeLists.txt  crt0.S  cstart.c  lib_syscall.c  lib_syscall.h
src/boot/: CMakeLists.txt  boot.S  boot1.c
src/comm/: cpu_ins.h  elf.h  types.h
src/kernel/: CMakeLists.txt  cpu.c  gdt.c  init.c  irq.c  kernel.S  kernel.lds  log.c  mem.c  mutex.c  sem.c  start.S  syscall.c  task.c
src/kernel/core/: task.c
src/kernel/cpu/: cpu.c
src/kernel/dev/: console.c  dev.c  kbd.c  mtime.c  time.c
src/kernel/dev/tty/: console.c  kbd.c  tty.c
src/kernel/first_task/: first_task.S  first_task.c
src/kernel/fs/: file.c  fs.c
src/kernel/include/: bitmap.h  console.h  cpu.h  dev.h  fs.h  irq.h  kbd.h  klib.h  list.h  log.h  mem.h  mmu.h  mtime.h  mux.h  os_cfg.h  sem.h  syscall.h  task.h
src/kernel/include/core/: task.h
src/kernel/include/fs/: file.h
src/kernel/include/tty/: console.h  kbd.h  tty.h
src/kernel/init/: init.c  start.S
src/kernel/lib/: bitmap.c  klib.c  list.c
src/kernel/tools/: log.c
src/loader/: CMakeLists.txt  loader.S  loader.h  loader_16.c  loader_32.c
src/shell/: CMakeLists.txt  shell.c  shell.h
